<?xml version="1.0"?>
<package format="2">
  <name>ground_segmentation</name>
  <version>0.1.0</version>
  <description>
    samplee
  </description>

  <maintainer email="emirhancibir@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <!-- Export the package -->
  <export>
    <!-- Other tools can rely on this package being a catkin package -->
  </export>
</package>
